# bluemira-spherical-tokamak

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  a.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
bluemira_st/: __init__.py  build_routines.py  materials.py  params.py  reactor.py
bluemira_st/blanket/: __init__.py  builder.py  manager.py
bluemira_st/equilibria/: __init__.py  designer.py  reference_values.py  tools.py
bluemira_st/equlibria/: __init__.py  designer.py  tools.py
bluemira_st/inboard_shield/: __init__.py  builder.py  manager.py
bluemira_st/optimisation/: __init__.py  magnectic_constrains.py  magnetic_constraints.py
bluemira_st/pf_coil/: __init__.py  builder.py  coilset.py  manager.py
bluemira_st/plasma/: __init__.py  builder.py  desinger.py  manager.py
bluemira_st/radial_build/: run_process.py
bluemira_st/tf_coil/: __init__.py  builder.py  designer.py  manager.py
docs/: index.md
scripts/: gen_api_ref.py  install_bluemira.sh
studies/first/: reactor.py  run.py
studies/first/config/: config.json  params.json
studies/first/data/PROCESS/: mve.py
studies/first/data/PROCESS/run_dir/: SIG_TF.json
studies/first/data/TF/: TFCoilDesign.json
tests/: __init__.py  conftest.py  equilibria_test.py
tests/config/: config.json  params.json
