[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bluemira_st"
dynamic = ["version"]
description = 'A demonstration project for a spherical tokamak in Bluemira.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "The Bluemira Team"}]
classifiers = [
  "Programming Language :: Python"
]

dependencies = ["bluemira", "numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pre-commit"]
test = [
  "pytest",
  "coverage[toml]",
  "pytest-html",
  "pytest-metadata",
  "pytest-json-report",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-section-index",
  "mkdocs-literate-nav",
]
lint = ["ruff", "mypy"]

[project.urls]
Documentation = "https://github.com/Fusion-power-plant-framework/bluemira_st#readme"
Issues = "https://github.com/Fusion-power-plant-framework/bluemira_st/issues"
Source = "https://github.com/Fusion-power-plant-framework/bluemira_st"

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "bluemira_st/_version.py"

# env: default
[tool.hatch.envs.default]
features = ["dev", "test", "docs", "lint"]

# env: docs
[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy"

# env: lint
[tool.hatch.envs.lint]
detached     = true                           # Don't inherit from default (does not download project dependencies)
dependencies = ["ruff", "mypy", "pre-commit"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:bluemira_st tests}"
style  = ["ruff {args:check .}"]
fmt    = ["pre-commit run --all-files --hook-stage manual"]
all    = ["style", "typing"]

# env: test
[tool.hatch.envs.test]
features = ["test"]
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]
[tool.hatch.envs.test.scripts]
tests      = "pytest {args:tests}"
tests-cov  = "pytest --cov bluemira_st  --cov-report html:htmlcov_bluemira_st --cov-report xml {args:tests}"
tests-cov-private  = "pytest --private --cov bluemira_st --cov-report html:htmlcov --cov-report xml {args:tests}"

[tool.ruff]
target-version = "py310"
line-length = 89
output-format= "concise"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "ANN",
  "D205", # Allow no blank lines after docstring
  "B027", # Allow non-abstract empty methods in abstract base classes
  "S105", # Ignore checks for possible passwords
  "S106",
  "S107",
  "C901", # Ignore complexity
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "COM812",
  "ISC001",
  "D107",
  "D200",
  "D212",
  "DOC201",
  "ERA001",
  "TRY003",
  "EM102",
  "N815",
  "PLR0914",
  "D416",
  "D100",
  "D102",
  "D103",
  "D104",
  "CPY001",
  "EM101",
]


[tool.ruff.lint.isort]
known-first-party = ["bluemira_st"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 89

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"__init__.py" = ["F401", "F403"]
"studies/**/*" = ["INP001", "CPY001"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.coverage.run]
source_pkgs = ["bluemira_st", "tests"]
branch = true
parallel = true
omit = ["bluemira_st/_version.py"]

[tool.coverage.paths]
base = ["bluemira_st", "*/bluemira_st"]
tests = ["tests", "*/bluemira_st/tests"]

[tool.coverage.report]
"exclude_also" = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
omit = ["bluemira_st/_version.py"]
